--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -17,16 +17,20 @@
     font-size: 2.25rem;
   }
   .h2 {
-    font-size: 2rem;
+    font-size: 32;
+    line-height: 44px;
   }
   .h3 {
-    font-size: 1.75rem;
+    font-size: 24px;
+    line-height: 32px;
   }
   .h4 {
-    font-size: 1.5rem;
+    font-size: 20px;
+    line-height: 26px;
   }
   .h5 {
-    font-size: 1.25rem;
+    font-size: 16;
+    line-height: 24px;
   }
   .h6 {
     font-size: 1rem;
