--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -20,7 +20,7 @@
     font-size: 2.25rem;
   }
   .h2 {
-    font-size: 32;
+    font-size: 32px;
     line-height: 44px;
   }
   .h3 {
@@ -32,10 +32,11 @@
     line-height: 26px;
   }
   .h5 {
-    font-size: 16;
+    font-size: 16px;
     line-height: 24px;
   }
   .h6 {
-    font-size: 1rem;
+    font-size: 14px;
+    line-height: 20px;
   }
 }
